; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_draw.c_UITOOLS95_DrawFrameButton.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_draw.c_UITOOLS95_DrawFrameButton.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @UITOOLS95_DrawFrameButton to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UITOOLS95_DrawFrameButton(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = and i32 %8, 255
  switch i32 %9, label %27 [
    i32 131, label %10
    i32 132, label %15
    i32 133, label %15
    i32 129, label %21
    i32 128, label %21
    i32 130, label %21
  ]

10:                                               ; preds = %3
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @UITOOLS95_DFC_ButtonPush(i32 %11, i32 %12, i32 %13)
  store i32 %14, i32* %4, align 4
  br label %29

15:                                               ; preds = %3, %3
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* @FALSE, align 4
  %20 = call i32 @UITOOLS95_DFC_ButtonCheckRadio(i32 %16, i32 %17, i32 %18, i32 %19)
  store i32 %20, i32* %4, align 4
  br label %29

21:                                               ; preds = %3, %3, %3
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @TRUE, align 4
  %26 = call i32 @UITOOLS95_DFC_ButtonCheckRadio(i32 %22, i32 %23, i32 %24, i32 %25)
  store i32 %26, i32* %4, align 4
  br label %29

27:                                               ; preds = %3
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %27, %21, %15, %10
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @UITOOLS95_DFC_ButtonPush(i32, i32, i32) #1

declare dso_local i32 @UITOOLS95_DFC_ButtonCheckRadio(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
